# maa-asst-rs

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
app/auto_update/: Cargo.toml
app/global/: Cargo.toml
app/global/src/: constants.rs  lib.rs  paths.rs
app/installer/: Cargo.toml  README.md
app/installer/src/: download.rs  extract.rs  lib.rs  version_json.rs
app/maa/: Cargo.toml  build.rs
app/maa/res/windows/: maa-manifest.rc
app/maa/src/: main.rs
app/route/: Cargo.toml
app/route/src/: lib.rs
app/settings/: Cargo.toml
app/settings/src/: lib.rs
app/zoot/: Cargo.toml
app/zoot/src/: assets.rs  logger.rs  main.rs
app/zoot/src/components/: mod.rs  tab_bar.rs  title_bar.rs
app/zoot/src/layouts/: app_layout.rs  mod.rs  tools_layout.rs
app/zoot/src/views/: app.rs  mod.rs  tab_bar.rs  title_bar.rs
app/zoot/src/views/route/: mod.rs
crates/maa-gpui/: Cargo.toml  build.rs
crates/maa-gpui/src/: app.rs  assets.rs  main.rs  root.rs  settings.rs  title_bar.rs
crates/maa-gpui/src/states/: app.rs  mod.rs  preference.rs  settings.rs
crates/maa-gpui/src/ui/: app.rs  mod.rs
crates/maa-gpui/src/ui/components/: icon.rs  mod.rs  router_test.rs  test.rs  title_bar.rs
crates/maa-gpui/src/ui/layouts/: default.rs
crates/maa-gpui/src/ui/views/: test.rs  title_bar.rs
crates/maa-installer/: Cargo.toml
crates/maa-macros/: Cargo.toml
crates/maa-macros/src/: lib.rs  task.rs  utils.rs
crates/maa-sys/: Cargo.toml  READMD.md  README.md  build.rs
crates/maa-sys-derive/: Cargo.toml
crates/maa-sys-derive/src/: lib.rs
crates/maa-sys/example/: demo.rs
crates/maa-sys/src/: assistant.rs  binding.rs  lib.rs  raw.rs  task.rs  types.rs
crates/maa-sys/src/protocol/: connection.rs  message.rs  mod.rs  task.rs
crates/maa-sys/tests/: base.rs  common.rs  get_image.rs
example/: create_ex.rs  example.rs
maa-sys/: Cargo.toml  build.rs
maa-sys-derive/src/: lib.rs
maa-sys/example/: demo.rs
maa-sys/src/: lib.rs  raw.rs  task.rs
src/: lib.rs  message.rs  raw.rs
tests/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
