[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
authors = ['enpitsulin <enpitsulin@gmail.com>']
license = "MIT"
edition = "2021"
repository = "https://github.com/enpitsuLin/maa-asst-rs"
rust-version = "1.87"
description = "N/a"


[workspace.dependencies]
maa-sys = { path = "crates/maa-sys" }
maa-macros = { path = "crates/maa-macros" }
maa-installer = { path = "crates/maa-installer" }

anyhow = "1.0.98"
semver = "1.0.19"
serde = "1"
tokio = "1.45.1"
serde_json = "1"


[profile.dev.package]
