[workspace]
resolver = "2"
members = ["crates/*", "xtask", "app/*"]
default-members = ["app/maa"]

[workspace.package]
authors = ['enpitsulin <enpitsulin@gmail.com>']
license = "MIT"
edition = "2021"
repository = "https://github.com/enpitsuLin/maa-asst-rs"
rust-version = "1.87"
description = "N/a"
publish = false

[workspace.dependencies]
maa-sys = { path = "crates/maa-sys" }
maa-macros = { path = "crates/maa-macros" }

# UI
gpui = { git = "https://github.com/zed-industries/zed" }
reqwest_client = { git = "https://github.com/zed-industries/zed" }

anyhow = "1.0.98"
semver = "1.0.19"
serde = "1"
serde_json = "1"
tokio = "1.45.1"
smallvec = "1.14.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hashbrown = "0.15.4"
