[package]
name = "xtask"
version = "0.1.0"
description = "工作区 xtask 脚本"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cargo-packager = { version = "0.11.5", default-features = false }
