[package]
name = "installer"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
global = { path = "../global" }
maa-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["macros"] }
reqwest = { workspace = true, features = ["json", "stream"] }
semver.workspace = true
anyhow.workspace = true
flate2.workspace = true
tar.workspace = true
zip = { workspace = true, features = ["deflate"] }
tokio-stream = "0.1.17"
