[package]
name = "settings"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
global = { path = "../global" }
gpui.workspace = true
anyhow.workspace = true
smallvec.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
