[package]
name = "zoot"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
settings = { path = "../settings" }
global = { path = "../global" }
gpui.workspace = true
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
reqwest_client.workspace = true
anyhow.workspace = true
smallvec.workspace = true
serde.workspace = true
serde_json.workspace = true
rust-embed = "8.7.2"
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }

[build-dependencies]
embed-resource = "3.0.4"
