[package]
name = "maa-gpui"
version = "0.0.1"
license = "MIT"
authors = ['enpitsulin <enpitsulin@gmail.com>']
description = "基于 GPUI 的明日方舟 MMA 助手的 GUI"
readme = "README.md"
edition = "2021"
rust-version = "1.87.0"
build = "build.rs"

[dependencies]
gpui = { git = "https://github.com/huacnlee/zed.git", branch = "webview" }
reqwest_client = { git = "https://github.com/huacnlee/zed.git", branch = "webview" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }

ffi = { package = "maa-sys", version = "0.1.0", path = "../maa-sys" }
# TODO: 移除多余的 features
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6.0.0"
rust-embed = "8.7.2"
hashbrown = { version = "0.15.4", features = ["serde"] }

[build-dependencies]
embed-resource = "3.0"

[[bin]]
name = "MAA"
path = "src/main.rs"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "MAA"
identifier = "me.enpitsulin.maa-gpui"
resources = []
icons = [
  "res/icon-64x64.png",
  "res/icon-128x128.png",
  "res/icon-256x256.png",
  "res/icon.ico",
]
copyright = "Copyright (c) enpitsulin 2025. All rights reserved."
description = "基于 GPUI 的明日方舟 MMA 助手的 GUI"

[package.metadata.packager.nsis]
appdata-paths = ["$LOCALAPPDATA/$IDENTIFIER"]
template = "res/windows/installer.nsi"
languages = ["English", "SimpChinese"]
display-language-selector = true
