[package]
name = "maa-sys"
version = "0.1.0"

publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "明日方舟 MMA 助手的 rust 绑定"
readme = "README.md"
build = "build.rs" 

[dependencies]
libloading = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
maa-macros = { workspace = true }
serde_with = "3.12.0"
thiserror = "2.0.12"
hashbrown = { version = "0.15.4", features = ["serde"] }

[build-dependencies]
bindgen = "0.71.1"

[[example]]
name = "demo"
path = "example/demo.rs"
